# jade-craft

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  JadeCraft.cpp  JadeCraftTest.cpp
jade/: CMakeLists.txt
jade/jade/args/: args-processor.cpp  args-processor.hpp  args_processor.cpp  args_processor.hpp
jade/jade/engine/: application-context.cpp  application-context.hpp  application_context.cpp  application_context.hpp
jade/jade/render/: render-context.cpp  render-context.hpp  shader-manager.cpp  shader-manager.hpp
jade/jade/render/d3d11/: render-context-d3d11.cpp  render-context-d3d11.hpp  shader-manager-d3d11.cpp  shader-manager-d3d11.hpp
jade/jade/render/d3d9/: render-context-d3d9.cpp  render-context-d3d9.hpp
jade/jade/render/open-gl/: render-context-open-gl.cpp  render-context-open-gl.hpp  shader-manager-open-gl.cpp  shader-manager-open-gl.hpp
jade/jade/render/render_context/: render_context.hpp
jade/jade/render/render_context/dx9/: render_context_dx9.cpp  render_context_dx9.hpp
jade/jade/render/render_context/gl/: render_context_open_gl.cpp  render_context_open_gl.hpp
jade/jade/strings/: string-manager.cpp  string-manager.hpp
jade/jade/threads/: task-queue.cpp  task_queue.cpp  task_queue.hpp
jade/jade/utils/: assert.hpp  scope_exit.hpp  string_manager.cpp  string_manager.hpp
jade/test/: task-queue.cpp  test.cpp
src/jade/: CMakeLists.txt
src/jade/jade/threads/: task_queue.hpp
src/jade/test/: test.cpp
src/jade/threads/: task_queue.cpp
src/jade/utils/: assert.hpp  string_manager.cpp  string_manager.hpp
wow/: wow.cpp
wow/filesystem/: mpq-archive.cpp  mpq-archive.hpp  mpq-chain.cpp  mpq-chain.hpp  mpq-file-manager.cpp  mpq-file-manager.hpp  mpq_archive.cpp  mpq_archive.hpp  mpq_chain.cpp  mpq_chain.hpp  mpq_file_manager.cpp  mpq_file_manager.hpp
wow/render/render_context/: render_context.hpp
wow/render/render_context/dx9/: render_context_dx9.cpp  render_context_dx9.hpp  render_context_dx_9.cpp  render_context_dx_9.hpp
wow/render/render_context/gl/: render_context_open_gl.cpp  render_context_open_gl.hpp
wow/render/render_context/open_gl/: render_context_open_gl.cpp  render_context_open_gl.hpp
wow/threads/: main-thread-task-queue.cpp  main-thread-task-queue.hpp  main_thread_task_queue.cpp  main_thread_task_queue.hpp
